@@ -16,27 +16,21 @@
  *
  */
 
-package org.apache.streampipes.dataexplorer.sdk;
+package org.apache.streampipes.dataexplorer.query.writer.item;
 
-import org.apache.streampipes.dataexplorer.influx.DataLakeInfluxQueryBuilder;
+import org.junit.Before;
 
-import org.junit.Test;
-
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+public abstract class TestItemWriter {
 
-public class DataLakeQueryBuilderTest {
+  protected List<Object> row;
+  protected List<String> columns;
 
-  private static final String MEASUREMENT = "measurement";
-  @Test
-  public void withSimpleColumnsTest() {
-    var result = DataLakeInfluxQueryBuilder
-        .create(MEASUREMENT)
-        .withSimpleColumns(List.of("one", "two"))
-        .build();
-
-    var expected = String.format("SELECT one,two FROM \"%s\";", MEASUREMENT);
-    assertEquals(expected , result.getCommand());
+  @Before
+  public void before() {
+    this.row = Arrays.asList("2022-11-16T05:54:37.051Z", "test", 1);
+    this.columns = Arrays.asList("time", "string", "number");
   }
 }
